--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"KBS presents ｢ナリふり!!!FES｣","eventImage":"sSSquGk1zHwL3xIekLpX_643457_1760004043179.webp","_date":{"year":2025,"month":11,"day":3},"openVenue":"11:30","startTime":"11:50","venueName":"Zepp Nagoya","ticketType":"前方","prefix":"A"};
+        const ticketInfoBase = {"eventName":"KBS presents ｢ナリふり!!!FES｣","eventImage":"sSSquGk1zHwL3xIekLpX_643457_1760004043179.webp","_date":{"year":2025,"month":11,"day":3},"openVenue":"11:30","startTime":"11:50","venueName":"Zepp Nagoya","ticketType":"通常","prefix":"B"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "MEGAFON",
