--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"KBS presents ｢ナリふり!!!FES｣","eventImage":"sSSquGk1zHwL3xIekLpX_643457_1760004043179.webp","_date":{"year":2025,"month":11,"day":3},"openVenue":"11:30","startTime":"11:50","venueName":"Zepp Nagoya","ticketType":"通常","prefix":"B"};
+        const ticketInfoBase = {"eventName":"小晴のか生誕『 のかと描くにじいろせかい 』","eventImage":"hThwpP4BS1p5KVXJ9e3a_453224_1761115675476.webp","_date":{"year":2025,"month":11,"day":10},"openVenue":"16:00","startTime":"17:00","venueName":"恵比寿ガーデンルーム","ticketType":"一般チケット","prefix":"B"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "MEGAFON",
+            favoriteName: "小晴のか",
             holderName: "藤井京平",
         }
     </script>
