--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"小晴のか生誕『 のかと描くにじいろせかい 』","eventImage":"hThwpP4BS1p5KVXJ9e3a_453224_1761115675476.webp","_date":{"year":2025,"month":11,"day":10},"openVenue":"16:00","startTime":"17:00","venueName":"恵比寿ガーデンルーム","ticketType":"一般チケット","prefix":"B"};
+        const ticketInfoBase = {"eventName":"アイドルアラモードプチVol.121～名古屋出張SP～","eventImage":"couRFXmOKzA9gyWAjBTc_445289_1758795529185.webp","_date":{"year":2025,"month":11,"day":15},"openVenue":"9:50","startTime":"10:20","venueName":"名古屋 Zephyr Hall","ticketType":"前方エリア抽選チケット","prefix":"SS"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "小晴のか",
+            favoriteName: "テラテラ",
             holderName: "藤井京平",
         }
     </script>
