--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"アイドルアラモードプチVol.121～名古屋出張SP～","eventImage":"couRFXmOKzA9gyWAjBTc_445289_1758795529185.webp","_date":{"year":2025,"month":11,"day":15},"openVenue":"9:50","startTime":"10:20","venueName":"名古屋 Zephyr Hall","ticketType":"前方エリア抽選チケット","prefix":"SS"};
+        const ticketInfoBase = {"eventName":"HYPE IDOL！","eventImage":"oSKEcfB009Zh8m0VSwuV_804345_1761789714379.webp","_date":{"year":2025,"month":11,"day":16},"openVenue":"11:30","startTime":"11:45","venueName":"SHIBUYA RING","ticketType":"前方チケット","prefix":"SA"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "テラテラ",
+            favoriteName: "アイテムはてるてるのみ",
             holderName: "藤井京平",
         }
     </script>
