--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "アイテムはてるてるのみ",
-            holderName: "藤井京平",
+            holderName: "和泉銀太",
         }
     </script>
     <script>
