--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"HYPE IDOL！","eventImage":"oSKEcfB009Zh8m0VSwuV_804345_1761789714379.webp","_date":{"year":2025,"month":11,"day":16},"openVenue":"11:30","startTime":"11:45","venueName":"SHIBUYA RING","ticketType":"前方チケット","prefix":"SA"};
+        const ticketInfoBase = {"eventName":"HEROINES FES in NAGOYA","eventImage":"VKH7oL4gezijY2J1WnUj_738781_1761806297305.webp","_date":{"year":2025,"month":11,"day":15},"openVenue":"12:00","startTime":"12:30","venueName":"COMTEC PORTBASE","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "アイテムはてるてるのみ",
