--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"HEROINES FES in NAGOYA","eventImage":"VKH7oL4gezijY2J1WnUj_738781_1761806297305.webp","_date":{"year":2025,"month":11,"day":15},"openVenue":"12:00","startTime":"12:30","venueName":"COMTEC PORTBASE","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"よるふぃくおん！","eventImage":"VKH7oL4gezijY2J1WnUj_559824_1763191641909.webp","_date":{"year":2025,"month":12,"day":1},"openVenue":"17:00","startTime":"17:40","venueName":"Spotify O-EAST","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "アイテムはてるてるのみ",
-            holderName: "和泉銀太",
+            favoriteName: "のんふぃく！",
+            holderName: "渡辺放浪",
         }
     </script>
     <script>
