--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"よるふぃくおん！","eventImage":"VKH7oL4gezijY2J1WnUj_559824_1763191641909.webp","_date":{"year":2025,"month":12,"day":1},"openVenue":"17:00","startTime":"17:40","venueName":"Spotify O-EAST","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"iON! × MEGAFON 2MAN LIVE 『シャウトダ!!! vol.2』","eventImage":"hThwpP4BS1p5KVXJ9e3a_878369_1764405682363.jpeg","_date":{"year":2025,"month":12,"day":4},"openVenue":"17:30","startTime":"18:00","venueName":"WOMBLIVE","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "のんふぃく！",
