--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"iON! × MEGAFON 2MAN LIVE 『シャウトダ!!! vol.2』","eventImage":"hThwpP4BS1p5KVXJ9e3a_878369_1764405682363.jpeg","_date":{"year":2025,"month":12,"day":4},"openVenue":"17:30","startTime":"18:00","venueName":"WOMBLIVE","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"Dresscode Road to Zepp Shinjuku 2 MAN LIVE「どれふぃく！」","eventImage":"VKH7oL4gezijY2J1WnUj_924340_1762248776627.webp"","_date":{"year":2025,"month":12,"day":7},"openVenue":"18:20","startTime":"19:00","venueName":"Spotify O-WEST","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "のんふぃく！",
