--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "のんふぃく！",
-            holderName: "渡辺放浪",
+            holderName: "あた",
         }
     </script>
     <script>
