--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"HEROINES LEAGUE FINAL vol.3","eventImage":"VKH7oL4gezijY2J1WnUj_252297_1763527117140.webp","_date":{"year":2025,"month":12,"day":10},"openVenue":"17:00","startTime":"18:00","venueName":"豊洲PIT","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"HEROINES ONE COIN vol.2","eventImage":"hThwpP4BS1p5KVXJ9e3a_524051_1763996361499.jpeg","_date":{"year":2025,"month":12,"day":13},"openVenue":"15:20","startTime":"16:00","venueName":"神田スクエアホール","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "のんふぃく！",
