--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"HEROINES ONE COIN vol.2","eventImage":"hThwpP4BS1p5KVXJ9e3a_524051_1763996361499.jpeg","_date":{"year":2025,"month":12,"day":13},"openVenue":"15:20","startTime":"16:00","venueName":"神田スクエアホール","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"NEO JAPONISM6周年対バンイベント NEO START","eventImage":"gJB8p08YeT7cyCwUXCje_823409_1763367345060.webp","_date":{"year":2025,"month":12,"day":15},"openVenue":"15:30","startTime":"16:00","venueName":"Spotify O-EAST","ticketType":"Sチケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
             favoriteName: "のんふぃく！",
