--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"NEO JAPONISM6周年対バンイベント NEO START","eventImage":"gJB8p08YeT7cyCwUXCje_823409_1763367345060.webp","_date":{"year":2025,"month":12,"day":15},"openVenue":"15:30","startTime":"16:00","venueName":"Spotify O-EAST","ticketType":"Sチケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"HEROINES Xmas in Osaka","eventImage":"hThwpP4BS1p5KVXJ9e3a_285211_1764142881338.webp","_date":{"year":2025,"month":12,"day":21},"openVenue":"12:00","startTime":"12:40","venueName":"Zepp Osaka Bayside","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "のんふぃく！",
-            holderName: "渡辺放浪",
+            favoriteName: "MEGAFON",
+            holderName: "藤井京平",
         }
     </script>
     <script>
