--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"HEROINES Xmas in Osaka","eventImage":"hThwpP4BS1p5KVXJ9e3a_285211_1764142881338.webp","_date":{"year":2025,"month":12,"day":21},"openVenue":"12:00","startTime":"12:40","venueName":"Zepp Osaka Bayside","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"バズバズリサイタル -X'mas-","eventImage":"kC8t072CqhvdwtCLmZO2_943462_1766464025830.webp","_date":{"year":2025,"month":12,"day":25},"openVenue":"14:45","startTime":"15:15","venueName":"渋谷音楽堂","ticketType":"前方チケット","prefix":"S"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "MEGAFON",
+            favoriteName: "アイテムはてるてるのみ",
             holderName: "藤井京平",
         }
     </script>
