--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"バズバズリサイタル -X'mas-","eventImage":"kC8t072CqhvdwtCLmZO2_943462_1766464025830.webp","_date":{"year":2025,"month":12,"day":25},"openVenue":"14:45","startTime":"15:15","venueName":"渋谷音楽堂","ticketType":"前方チケット","prefix":"S"};
+        const ticketInfoBase = {"eventName":"海まりん誕生日特典会","eventImage":"hThwpP4BS1p5KVXJ9e3a_726281_1766229946957.webp","_date":{"year":2025,"month":12,"day":29},"openVenue":"17:00","startTime":"17:00","venueName":"ふれあい貸し会議室 渋谷No30 東京都渋谷区渋谷２-２２-7 渋谷新生ビル803号室","ticketType":"入場チケット","prefix":"A"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "アイテムはてるてるのみ",
-            holderName: "藤井京平",
+            favoriteName: "",
+            holderName: "渡邉秀汰",
         }
     </script>
     <script>
