--- a/index.html
+++ b/index.html
@@ -721,10 +721,10 @@
         </div>
     </div>
     <script>
-        const ticketInfoBase = {"eventName":"海まりん誕生日特典会","eventImage":"hThwpP4BS1p5KVXJ9e3a_726281_1766229946957.webp","_date":{"year":2025,"month":12,"day":29},"openVenue":"17:00","startTime":"17:00","venueName":"ふれあい貸し会議室 渋谷No30 東京都渋谷区渋谷２-２２-7 渋谷新生ビル803号室","ticketType":"入場チケット","prefix":"A"};
+        const ticketInfoBase = {"eventName":"HEROINES主催公演「HEROINES NEW YEAR 後編」","eventImage":"hThwpP4BS1p5KVXJ9e3a_948619_1766152605408.webp","_date":{"year":2026,"month":1,"day":3},"openVenue":"17:00","startTime":"18:00","venueName":"VeatsSHIBUYA","ticketType":"前方チケット","prefix":"A"};
         const ticketInfo = {
             ...ticketInfoBase,
-            favoriteName: "",
+            favoriteName: "chuLa",
             holderName: "渡邉秀汰",
         }
     </script>
